Making the instructions image width 80% of container to prevent it from being too tall and overflowing the page.

--- a/oswald_reading_span/frontend/src/css/instructions.css
+++ b/oswald_reading_span/frontend/src/css/instructions.css
@@ -53,3 +53,7 @@
   font-size: 12px;
   font-style: italic;
 }
+
+.instruction-image {
+    width: 80%;
+}
